Thêm dummy test cho frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+     "test": "echo \"Run dummy test success\"",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "echo \"Run dummy test success\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.5.17"
